[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md

# include = ["*"]
exclude = [
  "**/.idea",
  "**/.vscode",
  "**/__pycache__",
  "**/.git",
  "**/venv",
]
extraPaths = ["typings"]
# defineConstant = { DEBUG = true }
pythonPlatform = "Linux"  # values: "Windows" | "Darwin" | "Linux" | "All"

typeCheckingMode = "off"  # values: "off" | "basic" | "strict"
# values: true | false | "none" | "information" | "warning" | "error"
# reportMissingImports    = false  # by flake8
# reportUnusedImport      = false
reportGeneralTypeIssues = false
# reportMissingTypeStubs  = false
reportUnusedExpression  = false

# useLibraryCodeForTypes = false


[tool.poetry]
name = "Fau-tools"
version = "1.4.3.1"
description = "A python module. The main function is for pytorch training."
authors = ["Fau <Fau818@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "Fau_tools"}]
homepage   = "https://github.com/Fau818/Fau_tools"
repository = "https://github.com/Fau818/Fau_tools"

[tool.poetry.dependencies]
python = ">=3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
